# lame-for-android

./: .gitignore  README.md  README_zh.md  build.gradle  config.gradle  gradle.properties  settings.gradle
api/: build.gradle
api/src/main/: AndroidManifest.xml
api/src/main/aidl/io/github/hesoft/lame/service/: ILameService.aidl  IRemoteLame.aidl
api/src/main/java/io/github/hesoft/lame/: ILame.kt  MPEGMode.java
core/: build.gradle
core/src/main/cpp/: CMakeLists.txt  lame_jni.c  lame_jni.h
core/src/main/java/io/github/hesoft/lame/: Lame.java  Native.java
lame/: build.gradle
lame/src/main/: AndroidManifest.xml
lame/src/main/cpp/: CMakeLists.txt  VbrTag.c  bitstream.c  encoder.c  fft.c  gain_analysis.c  id3tag.c  lame.c  mpglib_interface.c  newmdct.c  presets.c  psymodel.c  quantize.c  quantize_pvt.c  reservoir.c  set_get.c  set_get.h  tables.c  takehiro.c  util.c  vbrquantize.c  version.c
lame/src/main/cpp/include/lame/: lame.h
lame/src/main/cpp/vector/: xmm_quantize_sub.c
lame_jni/: build.gradle
lame_jni/src/main/: AndroidManifest.xml
lame_jni/src/main/cpp/: CMakeLists.txt  j_enum.h  log.h
lame_jni/src/main/java/io/github/hesoft/lame/: BufferReader.java  Native.java
lame_jni/src/main/res/values/: strings.xml
service/: build.gradle
service/src/main/: AndroidManifest.xml
service/src/main/java/io/github/hesoft/lame/service/: LameService.kt  RemoteLame.kt
test/: build.gradle
test/src/androidTest/java/io/github/hesoft/lame/test/: LameServiceTest.kt
test/src/main/: AndroidManifest.xml
